--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,37 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: 'Roboto', sans-serif;
 }
 
+nav {
+  /* border: 1px solid green; */
+  display: flex;
+  align-items: center;
+  background-color: #111111;
+  justify-content: space-between;
+  padding: 10px 50px;
+  max-width: 1440px;
+}
+
+nav a.active {
+  color: rgb(59 212 255);
+}
+
+nav .links {
+  /* border: 1px solid blue; */
+  width: 320px;
+  display: flex;
+  justify-content: space-between;
+}
+
+nav a {
+  color: #f9f9f9;
+  text-transform: uppercase;
+  text-decoration: none;
+  font-weight: 700;
+  font-size: 12px;
+  letter-spacing: 2px;
+  padding: 20px;
+  /* border: 1px solid red; */
+}
