--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,7 @@ nav a {
   background-image: url('./static/images/bg-rift.png');
   background-size: cover;
 }
+
+.golden {
+  color: rgb(175, 150, 95);
+}
